--- a/cake.html
+++ b/cake.html
@@ -22,15 +22,15 @@
 <body>
 	
 <div id="cake1">
-	<img src="../名称未設定フォルダ 2/cake01.jpg" width="100%" alt=""/>
+	<img src="VC/cake01.jpg" width="100%" alt=""/>
 	
 	</div>
 <div id="cake2">
-	<img src="../名称未設定フォルダ 2/cake03.jpg" width="100%"  alt=""/>
+	<img src="VC/cake03.jpg" width="100%"  alt=""/>
 	
 	</div>
 <div id="cake3"> 
-	<img src="../名称未設定フォルダ 2/cake02.jpg" width="100%"  alt=""/>
+	<img src="VC/cake02.jpg" width="100%"  alt=""/>
 	
 </div>
 	
