--- a/cake.html
+++ b/cake.html
@@ -19,15 +19,15 @@
 <body>
 	
 <div id="cake1">
-	<img src="../VC/cake01.jpg" width="100%" alt=""/>
+	<img src="cake01.jpg" width="100%" alt=""/>
 	
 	</div>
 <div id="cake2">
-	<img src="../VC/cake03.jpg" width="100%"  alt=""/>
+	<img src="cake03.jpg" width="100%"  alt=""/>
 	
 	</div>
 <div id="cake3"> 
-	<img src="../VC/cake02.jpg" width="100%"  alt=""/>
+	<img src="cake02.jpg" width="100%"  alt=""/>
 	
 </div>
 	
